Unit tests Kotlin is here (tests)

--- a/resources/src/main/res/values/strings.xml
+++ b/resources/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="error_no_internet">No internet connection :(</string>
     <string name="retry_again">Try again</string>
     <string name="type_word">Start typing</string>
+    <string name="translation_not_found">Result not found</string>
 
     <string name="copyright_yandex">Powered by Yandex.Translate</string>
 
